syntax = "proto3";

package memory;

import "resource.proto";

service Memory {
  rpc AppendMemory(AppendRequest) returns (AppendResponse);
  rpc GetWindow(WindowRequest) returns (WindowResponse);
}

message AppendRequest {
  string resource_id = 1;
  repeated resource.Identifier identifiers = 2;
}

message AppendResponse {
  string accepted = 1;
}

message WindowRequest {
  string resource_id = 1;
  int32 budget = 2;
  Allocation allocation = 3;

  message Allocation {
    float tools = 1;
    float context = 2;
    float conversation = 3;
  }
}

message WindowResponse {
  string resource_id = 1;
  repeated resource.Identifier tools = 2;
  repeated resource.Identifier context = 3;
  repeated resource.Identifier conversation = 4;
}
